Version 0.6 - August 31, 2010
=============================
- Fix: Anchors in generated URLs are quoted using urlib.quote, instead of
  urlib.quote_plus.

- In Router.dispatch(), if an exception occurs while handling an exception,
  raise it instead of trying to handle it again.

- Fixed bug when writing a unicode string to Response and charset is not set.
  Thanks to martinc for the patch.

- Changed: the app won't fallback anymore to the exception handler set for
  status 500 if handlers for other status are not set.

- Changed: exceptions are only logged when unhandled. It is up to exception
  handlers to log them when appropriate.


Version 0.5.1 - August 17, 2010
===============================
- When a URL matches, some attributes are set in the request object:
  - request.route: the matched route
  - request.route_args: the matched positional arguments, a tuple
  - request.route_kwargs: the matched keyword arguments, a dict

- WSGIApplication.handle_exception() doesn't automatically raises the exception
  when in debug mode: it is up to the error handler to raise it if in dev; it
  will be raised if no error handler is defined to handle it anyway.

- Added attributes, WSGIApplication.registry, Request.registry and
  Request.context, dictionaries for objects in use during the app or request
  lifetimes.

- Before passing the request method to the RequestHandler, '-' is replaced
  by '_', so that a method like WebDav's 'VERSION-CONTROL' can be supported.

- Config.get() now only returns the passed default value when key is defined.
  This is the intended, more predictable behavior: default is a default for
  the key, not the module. For example::

      # If config['foo']['bar'] is not set, return 'baz'.
      config.get('foo', 'bar', default='baz')

      # If config['foo'] is not set, return None. Default is ignored here.
      config.get('foo', default='baz')

- Router initialization now receives the app as parameter, so that extended